@@ -65,6 +65,97 @@ Runtime-tag policy:
 
 ---
 
+## Metal Runner Modes (Apple Silicon)
+
+Metal runners are controlled with a single mode flag that supports auto-detect and manual forcing:
+
+```properties
+gollek.runners.metal.enabled=true
+gollek.runners.metal-offload.enabled=true
+gollek.runners.metal.mode=auto  # auto|standard|offload|force|disabled
+```
+
+Behavior:
+- `auto`: detect availability and pick standard vs offload based on model size vs unified memory
+- `standard`: force the in-memory Metal runner
+- `offload`: force the weight-offload runner
+- `force`: keep Metal runners active even when detection fails
+- `disabled`: remove Metal runners from selection
+
+Configuration sources:
+- `gollek.runners.metal.mode` via `GOLLEK_METAL_MODE` env var
+- `gollek.runners.metal.enabled` via `GOLLEK_METAL_ENABLED` env var
+- `gollek.runners.metal-offload.enabled` via `GOLLEK_METAL_OFFLOAD_ENABLED` env var
+
+Engine device preference (routing defaults):
+- `gollek.engine.device.preference=auto|metal|cuda|cpu|none` (default: `auto`)
+- `auto` sets `preferredDevice=METAL` on Apple Silicon, otherwise no preference
+- Request override (default on): `device=metal|cuda|cpu|rocm|tpu|npu` in request parameters
+- Disable request overrides: `gollek.engine.device.preference.allow-request-override=false`
+
+Runner auto-Metal toggles:
+- GGUF: `gguf.provider.gpu.auto-metal=true` and `gguf.provider.gpu.auto-metal.layers=-1`
+- LiteRT: `litert.provider.gpu.auto-metal=true`
+- LibTorch: `libtorch.provider.gpu.auto-mps-enabled=true`
+- ONNX Runtime: `onnx.runner.execution_provider=coreml` (Apple Silicon CoreML EP)
+
+Diagnostics:
+- Auto mode will skip offload when the model fits unified memory.
+- Force mode keeps Metal runners active even if detection reports unavailable.
+- If Metal is unavailable and mode is not `force`, the Metal runners are removed from selection.
+- Build/install note: `make -C inference-gollek/extension/kernel/gollek-kernel-metal/src/main/cpp/metal install`
+  copies `libgollek_metal.dylib` to `~/.gollek/libs/` (and resources for packaging).
+
+Decision flow (auto + manual):
+
+```mermaid
+flowchart TD
+  A["Start"] --> B["Read gollek.runners.metal.mode"]
+  B --> C{"Mode = disabled?"}
+  C -->|Yes| X["Disable all Metal runners"]
+  C -->|No| D{"Metal available?"}
+  D -->|No| E{"Mode = force?"}
+  E -->|Yes| F["Keep Metal runners (forced)"]
+  E -->|No| X
+  D -->|Yes| G{"Mode = standard?"}
+  G -->|Yes| H["Select standard Metal only"]
+  G -->|No| I{"Mode = offload?"}
+  I -->|Yes| J["Select offload Metal only"]
+  I -->|No| K["Auto: estimate model vs unified memory"]
+  K -->|Fits| H
+  K -->|Does not fit| J
+```
+
+Example logs:
+
+```text
+INFO  [MetalRunner] Metal runner enabled (mode=auto, metalAvailable=true)
+INFO  [MetalWeightOffloadingRunner] Metal offload skipped (auto) — model fits in unified memory
+```
+
+GPU smoke test (Apple Silicon only):
+- Opt-in by setting `-Dgollek.metal.tests=true`
+- Optional strict mode: `-Dgollek.metal.tests.strict=true` (fails on Metal init errors instead of skipping)
+- Provide the dylib path via `-Dgollek.metal.library-path=/path/to/libgollek_metal.dylib`,
+  `-Dgollek.runners.metal.library-path=...`, or `GOLLEK_METAL_LIBRARY_PATH`
+- Default search paths: `~/.gollek/libs/libgollek_metal.dylib`, `/usr/local/lib/libgollek_metal.dylib`, `/Library/Gollek/libgollek_metal.dylib`
+- The test skips automatically if Metal is unavailable or the dylib is missing
+- Headless CI can report `No Metal device found`; run on a logged-in desktop session for GPU validation.
+- CI/profile shortcut: `mvn -f inference-gollek/extension/kernel/gollek-kernel-metal/pom.xml -Pmetal-gpu-tests test`
+- JVM note: the profile sets `--enable-native-access=ALL-UNNAMED` to satisfy FFM access.
+
+Troubleshooting checklist:
+- Metal not selected: confirm `gollek.runners.metal.enabled=true` and the device is Apple Silicon.
+- Metal unavailable in logs: set `gollek.runners.metal.mode=force` to test manual override.
+- Offload never used: try a larger model or set `gollek.runners.metal.mode=offload`.
+- Unexpected CPU fallback: verify other runners are enabled and the Metal mode is not `disabled`.
+- `No Metal device found`: run tests in a logged-in desktop session (headless CI may not expose Metal).
+
+Build note:
+- If you see `class not found` errors after moving SPI types, run a clean build to clear stale reactor output: `mvn -f inference-gollek/pom.xml clean install`.
+
+---
+
 ## Failure Triage
 
 When matrix fails:
